--- a/wp-content/themes/tabor-sopka/assets/css/main.css
+++ b/wp-content/themes/tabor-sopka/assets/css/main.css
@@ -63,7 +63,7 @@ h3 {
     font-family: var(--font-familiy-primary);
     font-size: var(--font-size-h3);
     font-weight: var(--font-weight-h3);
-    color: var(--text-primary-color);
+    color: var(--text-secondary-color);
 }
 
 p{
