--- a/wp-content/themes/tabor-sopka/assets/css/main.css
+++ b/wp-content/themes/tabor-sopka/assets/css/main.css
@@ -57,7 +57,7 @@ h2 {
     font-family: var(--font-familiy-primary);
     font-size: var(--font-size-h2);
     font-weight: var(--font-weight-h2);
-    color: var(--text-primary-color);
+    color: var(--neutral-secondary-color);
 }
 h3 {
     font-family: var(--font-familiy-primary);
@@ -79,4 +79,3 @@ small {
     font-weight: var(--font-weight-small);
     color: var(--text-primary-color);
 }
-
