--- a/wp-content/themes/tabor-sopka/assets/scss/custom.css
+++ b/wp-content/themes/tabor-sopka/assets/scss/custom.css
@@ -10527,4 +10527,98 @@ h6, .h6 {
 }
 .content > .wp-block-group:first-child .container, .content > .wp-block-group:first-child .areoi-element-container {
   text-align: center;
+}
+
+.header .navbar {
+  padding: 0;
+  height: 96px;
+  align-items: stretch;
+  border-top: 1.25px solid #040404;
+  border-bottom: 1.25px solid #040404;
+}
+.header .container-fluid, .header .container-sm, .header .container-md, .header .container-lg, .header .container-xl, .header .container-xxl {
+  align-items: stretch;
+  height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  padding-right: 0;
+}
+.header .navbar-collapse {
+  align-self: stretch;
+  height: 100%;
+  flex-grow: 1;
+  padding: 0;
+}
+.header .navbar-nav {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  grid-auto-flow: column;
+  padding: 0;
+  margin: 0;
+}
+.header .nav-item {
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+  margin: 0;
+}
+.header .nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #040404;
+  font-weight: 400;
+  text-align: center;
+  padding: 0 0.5rem;
+  white-space: nowrap;
+}
+.header .nav-link:hover, .header .nav-link:focus, .header .nav-link.show {
+  background-color: #FFE066;
+}
+.header .dropdown-menu {
+  background-color: #fffae6;
+  border: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  min-width: 100%;
+  width: -moz-max-content;
+  width: max-content;
+  z-index: 1000;
+  display: none;
+}
+.header .dropdown-menu .dropdown-item {
+  color: #040404;
+  padding: 1rem 1.5rem;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  white-space: nowrap;
+}
+.header .dropdown-menu .dropdown-item:hover {
+  background-color: #FFE066;
+}
+@media all and (min-width: 992px) {
+  .header .nav-item.dropdown:hover .dropdown-menu {
+    display: block;
+  }
+  .header .nav-item.dropdown:hover .nav-link {
+    background-color: #FFE066;
+  }
+}
+.header .nav-item.nav-btn-cta .nav-link {
+  background-color: #a36f38;
+  color: #ffe066;
+}
+.header .nav-item.nav-btn-cta .nav-link:hover {
+  background-color: #FFE066;
+  color: #040404;
 }/*# sourceMappingURL=custom.css.map */
