--- a/wp-content/themes/tabor-sopka/assets/scss/custom.scss
+++ b/wp-content/themes/tabor-sopka/assets/scss/custom.scss
@@ -146,6 +146,7 @@ h6{
     font-size: $h4-font-size;
 }
 
+// tlačítka
 .btn{
     padding: 0.75rem 1.5rem;
     border-radius: 0.5rem;
@@ -196,7 +197,7 @@ h6{
     background-color: $sopka-secondary-bg;
 }
 
-
+// stylování blocků pro obsah
 .content{
     display:flex;
     flex-direction: column;
@@ -247,6 +248,123 @@ h6{
 
     .container, .areoi-element-container{
         text-align: center;
+    }
+}
+
+// stylizace headeru
+
+
+.header{
+
+    .navbar{
+        padding: 0;
+        height: 96px;
+        align-items: stretch;
+        border-top: 1.25px solid $sopka-border-primary;
+        border-bottom: 1.25px solid $sopka-border-primary;
+    }
+
+    .container-fluid{
+        align-items: stretch;
+        height: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        padding-right: 0;
+    }
+
+    .navbar-collapse{
+        align-self: stretch;
+        height: 100%;
+        flex-grow: 1;
+        padding: 0;
+    }
+
+    .navbar-nav{
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(0,1fr));
+        grid-auto-flow: column;
+        padding: 0;
+        margin: 0;
+    }
+
+    .nav-item{
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        height: 100%;
+        position: relative;
+        margin: 0;
+    }
+
+    .nav-link{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        
+        
+        
+        color:$sopka-primary-text;
+        font-weight: $font-weight-normal;
+        text-align: center;
+        padding: 0 0.5rem;
+        white-space: nowrap;
+
+        &:hover, &:focus, &.show{
+            background-color: $hover;
+        }
+    }
+
+    .dropdown-menu{
+        background-color: $sopka-secondary-bg;
+        border:none;
+        padding:0;
+        margin:0;        
+
+        position: absolute;
+        top: 100%;
+        left:0;
+        min-width: 100%;
+        width: max-content;
+        z-index: 1000;
+        display:none;
+
+        .dropdown-item{
+            color: $sopka-primary-text;
+            padding: 1rem 1.5rem;
+            text-decoration: none;
+            display: block;
+            width: 100%;
+            white-space: nowrap;
+            
+            &:hover{
+                background-color: $hover;
+            }
+        }
+    }
+
+    @media all and (min-width: 992px){
+        .nav-item.dropdown:hover .dropdown-menu{
+            display: block;
+        }
+        .nav-item.dropdown:hover .nav-link{
+            background-color: $hover;
+        }
+    }
+
+    .nav-item.nav-btn-cta{
+        .nav-link{
+            background-color: $secondary;
+            color:$terciary;
+
+            &:hover{
+                background-color: $hover;
+                color:$sopka-primary-text;
+            }
+        }
     }
 }
 
