--- a/wp-content/themes/tabor-sopka/assets/scss/custom.css
+++ b/wp-content/themes/tabor-sopka/assets/scss/custom.css
@@ -10431,6 +10431,10 @@ h6, .h6 {
   font-weight: 400;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 .accordion-button {
   font-size: 1.25rem;
 }
@@ -10529,24 +10533,38 @@ h6, .h6 {
   text-align: center;
 }
 
+.content .row .wp-block-image {
+  margin: 0;
+  aspect-ratio: 16/9;
+  overflow: hidden;
+}
+
+@media (max-width: 767.98px) {
+  .content .row > [class*=col-] {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 1.5rem;
+  }
+  .content .row > [class*=col-]:last-child {
+    margin-bottom: 0;
+  }
+}
 .header .navbar {
   padding: 0;
-  height: 96px;
+  min-height: 96px;
   align-items: stretch;
   border-top: 1.25px solid #040404;
   border-bottom: 1.25px solid #040404;
 }
 .header .container-fluid, .header .container-sm, .header .container-md, .header .container-lg, .header .container-xl, .header .container-xxl {
   align-items: stretch;
-  height: 100%;
+  height: auto;
   display: flex;
-  flex-wrap: nowrap;
   padding-right: 0;
 }
 .header .navbar-collapse {
   align-self: stretch;
-  height: 100%;
-  flex-grow: 1;
+  height: auto;
   padding: 0;
 }
 .header .navbar-nav {
@@ -10576,37 +10594,35 @@ h6, .h6 {
   font-weight: 400;
   text-align: center;
   padding: 0 0.5rem;
-  white-space: nowrap;
 }
 .header .nav-link:hover, .header .nav-link:focus, .header .nav-link.show {
   background-color: #FFE066;
 }
-.header .dropdown-menu {
-  background-color: #fffae6;
-  border: none;
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  min-width: 100%;
-  width: -moz-max-content;
-  width: max-content;
-  z-index: 1000;
-  display: none;
-}
-.header .dropdown-menu .dropdown-item {
-  color: #040404;
-  padding: 1rem 1.5rem;
-  text-decoration: none;
-  display: block;
-  width: 100%;
-  white-space: nowrap;
-}
-.header .dropdown-menu .dropdown-item:hover {
-  background-color: #FFE066;
-}
 @media all and (min-width: 992px) {
+  .header .dropdown-menu {
+    background-color: #fffae6;
+    border: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 101%;
+    left: 0;
+    min-width: 100%;
+    width: -moz-max-content;
+    width: max-content;
+    z-index: 1000;
+    display: none;
+  }
+  .header .dropdown-menu .dropdown-item {
+    color: #040404;
+    padding: 1rem 1.5rem;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+  }
+  .header .dropdown-menu .dropdown-item:hover {
+    background-color: #FFE066;
+  }
   .header .nav-item.dropdown:hover .dropdown-menu {
     display: block;
   }
@@ -10621,4 +10637,132 @@ h6, .h6 {
 .header .nav-item.nav-btn-cta .nav-link:hover {
   background-color: #FFE066;
   color: #040404;
+}
+@media (max-width: 991.98px) {
+  .header .navbar-toggler {
+    grid-column: 1;
+    justify-self: start;
+    padding: 1rem;
+  }
+  .header .navbar-toggler .bi {
+    font-size: 2.5rem;
+  }
+  .header .navbar-toggler .bi-x-lg {
+    display: none;
+  }
+  .header .navbar-toggler[aria-expanded=true] .bi {
+    display: none;
+  }
+  .header .navbar-toggler[aria-expanded=true] .bi-x-lg {
+    display: block;
+  }
+  .header .navbar-brand {
+    grid-column: 2;
+    justify-self: center;
+    margin: 0;
+    text-align: center;
+  }
+  .header .header-mobile-logo {
+    grid-column: 3;
+    justify-self: end;
+    margin-right: 1rem;
+  }
+  .header .navbar {
+    height: 96px;
+  }
+  .header .container-fluid, .header .container-sm, .header .container-md, .header .container-lg, .header .container-xl, .header .container-xxl {
+    height: 100%;
+    align-items: center;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    padding-right: 0;
+    padding-left: 0;
+    width: 100%;
+  }
+  .header .navbar-collapse {
+    position: fixed;
+    top: 96px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: auto;
+    background-color: #fcae00;
+    z-index: 1050;
+    overflow-y: auto;
+    padding: 0;
+  }
+  .header .nav-item.dropdown > .nav-link {
+    position: relative;
+    padding-right: 3rem;
+  }
+  .header .nav-item.dropdown > .nav-link::after {
+    font-family: "bootstrap-icons";
+    content: "\f282";
+    position: absolute;
+    right: 1.5rem;
+    transition: transform 0.15s ease-in-out;
+  }
+  .header .nav-item.dropdown > .nav-link.show::after {
+    transform: rotate(-180deg);
+  }
+  .header .dropdown-menu {
+    position: static;
+    top: auto;
+    left: auto;
+    min-width: 100%;
+    width: 100%;
+    background-color: #fff5ca;
+    padding: 0;
+    margin: 0;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    visibility: hidden;
+    transition: 0.35s;
+  }
+  .header .dropdown-menu.show {
+    max-height: 500px;
+    visibility: visible;
+    opacity: 1;
+  }
+  .header .dropdown-item {
+    color: #040404;
+    text-decoration: none;
+    padding: 1.25rem 1.5rem 1.25rem 3rem;
+  }
+  .header .dropdown-item:hover {
+    background-color: #FFE066;
+  }
+  .header .navbar-nav {
+    display: flex !important;
+    flex-direction: column;
+    align-items: stretch !important;
+    gap: 0;
+    height: auto;
+  }
+  .header .nav-item {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+    height: auto;
+  }
+  .header .nav-link {
+    justify-content: flex-start;
+    padding: 1.5rem 1.5rem;
+    height: auto;
+  }
+}
+@media (max-width: 991.98px) and (max-width: 575.98px) {
+  .header .navbar-toggler {
+    padding: 0;
+    padding-left: 0.25rem;
+    padding-right: 0.5rem;
+  }
+  .header .navbar-toggler .bi {
+    font-size: 2rem;
+  }
+  .header .navbar-toggler .bi-x-lg {
+    font-size: 2rem;
+  }
 }/*# sourceMappingURL=custom.css.map */
