--- a/wp-content/themes/tabor-sopka/assets/scss/custom.scss
+++ b/wp-content/themes/tabor-sopka/assets/scss/custom.scss
@@ -142,9 +142,14 @@ h6{
     font-weight: $font-weight-normal;
 }
 
+html,body{
+    overflow-x: hidden;
+}
 .accordion-button{
     font-size: $h4-font-size;
 }
+
+
 
 // tlačítka
 .btn{
@@ -251,14 +256,31 @@ h6{
     }
 }
 
-// stylizace headeru
+.content .row .wp-block-image{
+    margin: 0;
+    aspect-ratio: 16 / 9;
+    overflow: hidden;
+}
+@include media-breakpoint-down(md){
+    .content .row > [class*="col-"]{
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-bottom: 1.5rem;
+    }
+    .content .row > [class*="col-"]:last-child{
+        margin-bottom: 0;
+    }
+}
 
+
+
+// stylizace headeru
 
 .header{
 
     .navbar{
         padding: 0;
-        height: 96px;
+        min-height: 96px;
         align-items: stretch;
         border-top: 1.25px solid $sopka-border-primary;
         border-bottom: 1.25px solid $sopka-border-primary;
@@ -266,16 +288,14 @@ h6{
 
     .container-fluid{
         align-items: stretch;
-        height: 100%;
+        height: auto;
         display: flex;
-        flex-wrap: nowrap;
         padding-right: 0;
     }
 
     .navbar-collapse{
         align-self: stretch;
-        height: 100%;
-        flex-grow: 1;
+        height: auto;
         padding: 0;
     }
 
@@ -311,21 +331,21 @@ h6{
         font-weight: $font-weight-normal;
         text-align: center;
         padding: 0 0.5rem;
-        white-space: nowrap;
 
         &:hover, &:focus, &.show{
             background-color: $hover;
         }
     }
 
-    .dropdown-menu{
+    @media all and (min-width: 992px){
+        .dropdown-menu{
         background-color: $sopka-secondary-bg;
         border:none;
         padding:0;
         margin:0;        
 
         position: absolute;
-        top: 100%;
+        top: 101%;
         left:0;
         min-width: 100%;
         width: max-content;
@@ -338,15 +358,12 @@ h6{
             text-decoration: none;
             display: block;
             width: 100%;
-            white-space: nowrap;
             
             &:hover{
                 background-color: $hover;
             }
         }
     }
-
-    @media all and (min-width: 992px){
         .nav-item.dropdown:hover .dropdown-menu{
             display: block;
         }
@@ -364,6 +381,155 @@ h6{
                 background-color: $hover;
                 color:$sopka-primary-text;
             }
+        }
+    }
+// mobile verze menu
+    @include media-breakpoint-down(lg){
+
+        .navbar-toggler{
+            grid-column: 1;
+            justify-self: start;
+            padding: 1rem;
+
+            .bi{
+                font-size: 2.5rem;
+            }
+            .bi-x-lg{
+                display: none;
+            }
+        }
+        .navbar-toggler[aria-expanded="true"]{
+            .bi{
+                display:none;
+            }
+            .bi-x-lg{
+                display: block;
+            }
+        }
+
+        .navbar-brand{
+            grid-column: 2;
+            justify-self: center;
+            margin:0;
+            text-align: center;
+        }
+        .header-mobile-logo{
+            grid-column: 3;
+            justify-self: end;
+            margin-right: 1rem;
+        }
+
+        .navbar{
+            height: 96px;
+        }
+        .container-fluid{
+            height: 100%;
+            align-items: center;
+            display:grid;
+            grid-template-columns: auto 1fr auto;
+            padding-right: 0;
+            padding-left: 0;
+            width: 100%;
+        }
+
+        .navbar-collapse{
+            position: fixed;
+            top: 96px;
+            left:0;
+            right: 0;
+            bottom: 0;
+            height: auto;
+            background-color: $sopka-primary-bg;
+            z-index: 1050;
+            overflow-y: auto;
+            padding: 0;
+        }
+        
+        .nav-item.dropdown > .nav-link{
+            position: relative;
+            padding-right: 3rem;
+        }
+
+        .nav-item.dropdown > .nav-link::after{
+            font-family: "bootstrap-icons";
+            content: "\F282";
+            position: absolute;
+            right: 1.5rem;
+            transition: transform .15s ease-in-out;
+        }
+
+        .nav-item.dropdown > .nav-link.show::after{
+            transform: rotate(-180deg);
+        }
+
+        .dropdown-menu{
+            position: static;
+            top: auto;
+            left: auto;
+            min-width: 100%;
+            width: 100%;
+            background-color: $sopka-terciary-bg;
+            padding: 0;
+            margin: 0;
+            
+            max-height: 0;
+            opacity:0;
+            overflow: hidden;
+            visibility: hidden;
+            transition: 0.35s;
+        }
+
+
+        .dropdown-menu.show {
+            max-height: 500px;
+            visibility: visible;
+            opacity:1;
+        }
+
+        .dropdown-item {
+            color: $sopka-primary-text;
+            text-decoration: none;
+            padding: 1.25rem 1.5rem 1.25rem 3rem;
+
+            &:hover{
+                background-color: $hover;
+            }
+        }
+        
+        .navbar-nav{
+            display: flex !important;
+            flex-direction: column;
+            align-items: stretch !important;
+            gap: 0;
+            height: auto;
+        }
+
+        .nav-item{
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            width: 100%;
+            height: auto;
+        }
+
+        .nav-link{
+            justify-content: flex-start;
+            padding: 1.5rem 1.5rem;
+            height: auto;
+        }
+        @include media-breakpoint-down(sm){
+            .navbar-toggler{
+            padding: 0;
+            padding-left: 0.25rem;
+            padding-right: 0.5rem;
+            .bi{
+                font-size: 2rem;
+            }
+            .bi-x-lg{
+                font-size: 2rem;
+            }
+
+        }
         }
     }
 }
